web/book/tests/snapshots/snapshot__tests__prql__transforms__select-0.prql.snap
---
source: web/book/tests/snapshot.rs
expression: "from employees\nselect name = f\"{first_name} {last_name}\"\n"
---
SELECT
  CONCAT(CONCAT(first_name, ' '), last_name) AS name
FROM
  employees

