web/book/tests/snapshots/snapshot__tests__prql__transforms__select-3.prql.snap
---
source: book/tests/snapshot.rs
expression: "from e=employees\nselect [e.first_name, e.last_name]\n"
---
SELECT
  first_name,
  last_name
FROM
  employees AS e

