web/book/tests/snapshots/snapshot__tests__prql__transforms__select-4.prql.snap
---
source: book/tests/snapshot.rs
expression: "# Can't yet format & compile\n\nprql target:sql.bigquery\nfrom tracks\nselect ![milliseconds,bytes]\n"
---
SELECT
  *
EXCEPT
  (milliseconds, bytes)
FROM
  tracks

