web/book/tests/snapshots/snapshot__tests__prql__transforms__select-6.prql.snap
---
source: book/tests/snapshot.rs
expression: "# Can't yet format & compile\n\nfrom artists\nderive nick = name\nselect ![artists.*]\n"
---
SELECT
  name AS nick
FROM
  artists

