web/book/tests/snapshots/snapshot__tests__prql__transforms__sort-4.prql.snap
---
source: web/book/tests/snapshot.rs
expression: "from employees\nsort tenure\nderive name = f\"{first_name} {last_name}\"\n"
---
SELECT
  *,
  CONCAT(first_name, ' ', last_name) AS name
FROM
  employees
ORDER BY
  tenure

