web/book/tests/snapshots/snapshot__tests__prql__transforms__take-0.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\ntake 10\n"
---
SELECT
  *
FROM
  employees
LIMIT
  10

